aggiunte funzionalità segnalazioni e commenti + aggiornamento database
- Endpoint REST da implementare:
  * GET /utente/{id}/segnalazioni (DA FARE)
  * GET /utente/{id}/segnalazioni/{idSegnalazione} (DA FARE)
  * DELETE /user/{id}/segnalazione/{id} (DA FARE)
  * PUT /user/{id}/segnalazione/{id} (DA FARE)
  * POST /user/{id}/segnalazione/{id}/note (DA FARE)
  * DELETE /user/{id}/segnalazione/{id}/note (DA FARE)

- Modifiche al database:
  * Aggiunto campo 'titolo' alla tabella Segnalazione
  * Creata tabella Commento (id, descrizione)
  * Aggiornate entity per aggiungere tutte le relazioni necessarie:
      - Utente ↔ Cittadino ↔ Ente ↔ Segnalazione ↔ Commento
      - OneToMany / ManyToOne tra segnalazioni e commenti
      - OneToMany / ManyToOne tra utenti e segnalazioni
      - OneToMany / ManyToOne tra utenti e commenti
